# backend-at-home-04-demo

demo01/: README.md  docker-compose.yml  nathan.txt  new_book.json  pyproject.toml
demo01/demo01/: database.py  example_graphql.md  main.py
demo01/demo01/books/: schema.py
demo01/sql_init/: 01.sql  03.sql
demo02/: Dockerfile  docker-compose.yml  pyproject.toml
demo02/demo02/: main.py
demo02/demo02/books/: exceptions.py  graphql.py  model.py  router.py  schema.py
demo02/sql_init/: 02.sql
demo03/: .env  Dockerfile  README.md  docker-compose.yml  graphql_demo.md  pyproject.toml
demo03/demo03/: database.py  graphql_models.py  main.py  models.py
demo03/demo03/authors/: exceptions.py  graphql.py  repository.py  schema.py
demo03/demo03/books/: exceptions.py  graphql.py  repository.py  schema.py
demo03/sql_init/: 01.sql  02.sql  03.sql
demo04/: .env  Dockerfile  README.md  docker-compose.yml
demo04/demo04/: database.py  main.py  utils.py
demo04/demo04/books/: exceptions.py  graphql.py  init.py  repository.py  router.py
demo05/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
demo05/demo05/: database.py  main.py  models.py  shared.py
demo05/demo05/authors/: exceptions.py  graphql.py  repository.py  router.py
demo05/demo05/books/: repository.py  router.py
