[tool.poetry]
name = "demo04"
version = "0.1.0"
description = ""
authors = ["Nathan Segers <nathan.segers@howest.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.144.0"}
python-dotenv = "^0.21.0"
pymongo = {extras = ["srv"], version = "^4.3.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
